TEST_PROGRAMS/VALID/08/blankidentifier.go
package main;

var _, _ = 2,3;
