TEST_PROGRAMS/INVALID/06/invalid2.go
package main
var x,y,z = 12, 2
